Update collection page
- Update article links, vitamin to aquent talent

--- a/_data/collections/COL-06-007.yml
+++ b/_data/collections/COL-06-007.yml
@@ -10,7 +10,7 @@ portfolio:
   header: "Portfolio Development"
   links:
   - label: "Top 5 Free Portfolio Sites for Creatives"
-    url: "https://vitamintalent.com/blog/top-5-free-portfolio-sites"
+    url: "https://aquenttalent.com/blog/top-5-free-portfolio-sites"
   - label: "Improving Your Portfolio is Easier Than You Think"
     url: "https://medium.com/gymnasium/improving-your-portfolio-is-easier-than-you-think-b1430bbe1007"
   - label: "BTW: Developers Need Portfolios Too"
@@ -20,19 +20,19 @@ networking:
   header: "Networking 101"
   links:
   - label: "8 Networking Techniques for Meeting People Face-to-Face"
-    url: "https://vitamintalent.com/blog/8-networking-techniques-for-meeting-people-face-to-face"
+    url: "https://aquenttalent.com/blog/8-networking-techniques-for-meeting-people-face-to-face"
   - label: "Are You Making the Most of LinkedIn to Build Your Personal Brand?"
-    url: "https://vitamintalent.com/blog/are-you-making-the-most-of-linkedin-to-build-your-personal-brand"
+    url: "https://aquenttalent.com/blog/are-you-making-the-most-of-linkedin-to-build-your-personal-brand"
   - label: "How to Create a Great LinkedIn Profile for Designers"
-    url: "https://vitamintalent.com/blog/how-to-create-a-great-linkedin-profile-for-designers"
+    url: "https://aquenttalent.com/blog/how-to-create-a-great-linkedin-profile-for-designers"
   - label: "LinkedIns & Outs: Get Noticed and Find Opportunities"
-    url: "https://vitamintalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities"
+    url: "https://aquenttalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities"
   - label: "The 5 Rules of Personal Branding and How to Use Them"
-    url: "https://vitamintalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities"
+    url: "https://aquenttalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities"
   - label: "It Pays to Build a Network of Recruiters Who See Your Value"
     url: "https://aquenttalent.com/blog/it-pays-to-build-a-network-of-recruiters-who-see-your-value"
   - label: "How to Apply Online (and Actually Get a Job)"
-    url: "https://vitamintalent.com/blog/how-to-apply-online-and-actually-get-a-job"
+    url: "https://aquenttalent.com/blog/how-to-apply-online-and-actually-get-a-job"
 
 interview:
   header: "Ace the Interview"
@@ -40,21 +40,21 @@ interview:
   - label: "How to Conduct an Interview Like a Boss"
     url: "https://medium.com/gymnasium/how-to-conduct-an-interview-like-a-boss-7de5c9810c4c"
   - label: "52 Favorite Interview Questions From Top Design Leaders"
-    url: "https://vitamintalent.com/blog/52-favorite-interview-questions-from-top-design-leaders"
+    url: "https://aquenttalent.com/blog/52-favorite-interview-questions-from-top-design-leaders"
   - label: "How to Win Your Next Video Interview"
-    url: "https://vitamintalent.com/blog/how-to-win-your-next-video-interview"
+    url: "https://aquenttalent.com/blog/how-to-win-your-next-video-interview"
   - label: "Interviewing? Better Have Answers to These 7 Questions"
-    url: "https://vitamintalent.com/blog/interviewing-better-have-answers-to-these-7-questions"
+    url: "https://aquenttalent.com/blog/interviewing-better-have-answers-to-these-7-questions"
   - label: "14 Best Interview Questions for Creatives"
-    url: "https://vitamintalent.com/blog/14-best-interview-questions-for-creatives"
+    url: "https://aquenttalent.com/blog/14-best-interview-questions-for-creatives"
   - label: "Top 10 Must-Ask Interview Questions for Designers"
-    url: "https://vitamintalent.com/blog/top-10-must-ask-interview-questions-for-designers"
+    url: "https://aquenttalent.com/blog/top-10-must-ask-interview-questions-for-designers"
 
 designers:
   header: "Tips for Designers"
   links:
   - label: "How to Create a UX Profile That Will Help You Land Your Dream Job"
-    url: "https://vitamintalent.com/blog/how-to-create-a-ux-profile-that-will-help-you-land-your-dream-job"
+    url: "https://aquenttalent.com/blog/how-to-create-a-ux-profile-that-will-help-you-land-your-dream-job"
   - label: "The Design Leader Job Search. It’s All about the Brand (Yours)"
     url: "https://medium.com/aquent-off-hours/the-design-leader-job-search-its-all-about-the-brand-yours-3ca9e4d0c983"
   - label: "Considering Contract Work? Here’s Why You Should Go for It"
@@ -66,11 +66,11 @@ designers:
   - label: "Adaptability As the Key to Success in Design"
     url: "https://medium.com/gymnasium/adaptability-as-the-key-to-success-in-design-ea64c1ed4044"
   - label: "How to Navigate the 7 Stages of Your Design Career"
-    url: "https://vitamintalent.com/blog/how-to-navigate-the-7-stages-of-your-design-career"
+    url: "https://aquenttalent.com/blog/how-to-navigate-the-7-stages-of-your-design-career"
   - label: "The 5 Critical Skills You Need to Advance in UX"
-    url: "https://vitamintalent.com/blog/the-5-critical-skills-you-need-to-advance-in-ux"
+    url: "https://aquenttalent.com/blog/the-5-critical-skills-you-need-to-advance-in-ux"
   - label: "Advice for Planning Your Next Career Move in UX"
-    url: "https://vitamintalent.com/blog/advice-for-planning-your-next-career-move-in-ux"
+    url: "https://aquenttalent.com/blog/advice-for-planning-your-next-career-move-in-ux"
   - label: "Advice on Landing Your Dream Design Leadership Job"
     url: "https://aquent.com/blog/advice-on-landing-your-dream-design-leadership-job"
 
@@ -80,7 +80,7 @@ managers:
   - label: "UX Hiring Is Not Easy, Even for a Company Full of UX Recruiters"
     url: "https://medium.com/aquent-off-hours/ux-hiring-is-not-easy-even-for-a-company-full-of-ux-recruiters-4bd2ce1e6720"
   - label: "7 Non-Technical Skills Your Creative Candidates Should Have"
-    url: "https://vitamintalent.com/blog/7-non-technical-skills-your-creative-candidates-should-have"
+    url: "https://aquenttalent.com/blog/7-non-technical-skills-your-creative-candidates-should-have"
   - label: "If Your Team Isn’t Learning, They’re Falling Behind. Fix It"
     url: "https://medium.com/aquent-off-hours/if-your-team-isnt-learning-they-re-falling-behind-fix-it-52331858383d"
   - label: "Eight Steps to Launching a Successful Mentorship Program"
@@ -94,13 +94,13 @@ diversity:
   header: "Diversity & Inclusion"
   links:
   - label: "How to Fix Your Talent Pipeline to Be More Inclusive"
-    url: "https://vitamintalent.com/blog/how-to-fix-your-talent-pipeline-to-be-more-inclusive"
+    url: "https://aquenttalent.com/blog/how-to-fix-your-talent-pipeline-to-be-more-inclusive"
   - label: "Unlocking Creativity Through Diversity"
-    url: "https://vitamintalent.com/blog/unlocking-creativity-through-diversity"
+    url: "https://aquenttalent.com/blog/unlocking-creativity-through-diversity"
   - label: "Unpacking the Hiring Process: Questions You Can Ask to Identify Bias"
-    url: "https://vitamintalent.com/blog/unpacking-the-hiring-process-questions-you-can-ask-to-identify-bias"
+    url: "https://aquenttalent.com/blog/unpacking-the-hiring-process-questions-you-can-ask-to-identify-bias"
   - label: "How Addressing Our Diversity Challenges Inspired Our Diversity Recruiting Solution"
-    url: "https://vitamintalent.com/blog/how-addressing-our-diversity-challenges-inspired-our-diversity-recruiting-solution"
+    url: "https://aquenttalent.com/blog/how-addressing-our-diversity-challenges-inspired-our-diversity-recruiting-solution"
   - label: "Working Toward Closing the Gender Gap in Tech"
     url: "https://medium.com/gymnasium/working-toward-closing-the-gender-gap-in-tech-eb43d17a72ab"
   - label: "Helpful Diversity Recruiting Strategies You Need to Know"
