Update collection page
- Update article links, more redirect fix goodness

--- a/_data/collections/COL-06-007.yml
+++ b/_data/collections/COL-06-007.yml
@@ -24,7 +24,7 @@ networking:
   - label: "Are You Making the Most of LinkedIn to Build Your Personal Brand?"
     url: "https://aquenttalent.com/blog/are-you-making-the-most-of-linkedin-to-build-your-personal-brand"
   - label: "How to Create a Great LinkedIn Profile for Designers"
-    url: "https://aquenttalent.com/blog/how-to-create-a-great-linkedin-profile-for-designers"
+    url: "https://aquenttalent.com/blog/how-to-create-a-great-designer-linkedin-profile"
   - label: "LinkedIns & Outs: Get Noticed and Find Opportunities"
     url: "https://aquenttalent.com/blog/linkedins-and-outs-get-noticed-and-find-opportunities"
   - label: "The 5 Rules of Personal Branding and How to Use Them"
@@ -40,7 +40,7 @@ interview:
   - label: "How to Conduct an Interview Like a Boss"
     url: "https://medium.com/gymnasium/how-to-conduct-an-interview-like-a-boss-7de5c9810c4c"
   - label: "52 Favorite Interview Questions From Top Design Leaders"
-    url: "https://aquenttalent.com/blog/52-favorite-interview-questions-from-top-design-leaders"
+    url: "https://aquent.com/blog/52-favorite-interview-questions-from-top-design-leaders"
   - label: "How to Win Your Next Video Interview"
     url: "https://aquenttalent.com/blog/how-to-win-your-next-video-interview"
   - label: "Interviewing? Better Have Answers to These 7 Questions"
@@ -48,7 +48,7 @@ interview:
   - label: "14 Best Interview Questions for Creatives"
     url: "https://aquenttalent.com/blog/14-best-interview-questions-for-creatives"
   - label: "Top 10 Must-Ask Interview Questions for Designers"
-    url: "https://aquenttalent.com/blog/top-10-must-ask-interview-questions-for-designers"
+    url: "https://aquenttalent.com/blog/top-10-must-ask-design-interview-questions"
 
 designers:
   header: "Tips for Designers"
@@ -68,7 +68,7 @@ designers:
   - label: "How to Navigate the 7 Stages of Your Design Career"
     url: "https://aquenttalent.com/blog/how-to-navigate-the-7-stages-of-your-design-career"
   - label: "The 5 Critical Skills You Need to Advance in UX"
-    url: "https://aquenttalent.com/blog/the-5-critical-skills-you-need-to-advance-in-ux"
+    url: "https://aquenttalent.com/blog/the-5-critical-ux-designer-skills-you-need-to-advance"
   - label: "Advice for Planning Your Next Career Move in UX"
     url: "https://aquenttalent.com/blog/advice-for-planning-your-next-career-move-in-ux"
   - label: "Advice on Landing Your Dream Design Leadership Job"
@@ -98,7 +98,7 @@ diversity:
   - label: "Unlocking Creativity Through Diversity"
     url: "https://aquenttalent.com/blog/unlocking-creativity-through-diversity"
   - label: "Unpacking the Hiring Process: Questions You Can Ask to Identify Bias"
-    url: "https://aquenttalent.com/blog/unpacking-the-hiring-process-questions-you-can-ask-to-identify-bias"
+    url: "https://aquenttalent.com/blog/questions-you-need-to-ask-to-identify-hiring-bias"
   - label: "How Addressing Our Diversity Challenges Inspired Our Diversity Recruiting Solution"
     url: "https://aquenttalent.com/blog/how-addressing-our-diversity-challenges-inspired-our-diversity-recruiting-solution"
   - label: "Working Toward Closing the Gender Gap in Tech"
