--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -4,7 +4,7 @@ auth_promo: articles/ai-mockup-magic.html
 # Live Stream
 # Set true/false (lowercase).
 # Note: true overrides current/auth promo heros
-live_stream: false
+live_stream: true
 
 # Source
 # Set twitch/youtube (lowercase)
@@ -14,14 +14,14 @@ embed_source: "youtube"
 # Content
 # Update per live stream, if needed
 title: "Livestream"
-short_description: "Picture Perfect: Using AI to Enhance Images"
+short_description: "Coding in the Kitchen with ChatGPT"
 byline: "with Andrew Miller and Jeremy Osborn"
 
 # twitch
 twitch_channel: "andrewpmiller"
 
 # youtube
-youtube_video_ID: "Ii_4MC5KuiQ"
+youtube_video_ID: "aoqJiFrdaCY"
 
 # Aspect Ratio 16:19
 embed_width: "854"
