Update home page hero
- Update livestream hero

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -21,7 +21,7 @@ byline: "with Andrew Miller and Jeremy Osborn"
 twitch_channel: "andrewpmiller"
 
 # youtube
-youtube_video_ID: "aoqJiFrdaCY"
+youtube_video_ID: "pMt7PnJBslo"
 
 # Aspect Ratio 16:19
 embed_width: "854"
