Add initial hero promo content
- Add data file
- Add layout
- Add artwork
- Update hero promo

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,5 +1,5 @@
-current_promo: articles/ai-mockup-magic.html
-auth_promo: articles/ai-mockup-magic.html
+current_promo: livestreams/hero-promo.html
+auth_promo: livestreams/hero-promo.html
 
 # Live Stream
 # Set true/false (lowercase).
