Update livestreams promo hero
- Add alt text

--- a/_data/heros/livestreams/fill-in-the-blanks.yml
+++ b/_data/heros/livestreams/fill-in-the-blanks.yml
@@ -4,7 +4,7 @@ title: "Fill in the Blanks: Demonstrating How to Build a Custom GPT"
 description: "Watch it here"
 date: "Tuesday, January 30"
 time: "10 AM EST / 4 PM CET"
-alt_text: ""
+alt_text: "Two engineers build a custom ChatGPT bot from wooden blocks."
 artwork:
   1: /fill-in-the-blanks-768w.jpg
   2: /fill-in-the-blanks-1280w.jpg
