--- a/_data/heros/livestreams/fill-in-the-blanks.yml
+++ b/_data/heros/livestreams/fill-in-the-blanks.yml
@@ -1,8 +1,9 @@
 id: fill-in-the-blanks
 subhead: "New Livestream"
-title: "Fill in the Blanks: Demonstrating How to Build a Custom GPT"
+title: "Fill in the Blanks: Demonstrating How to Build <span class='no-wrap'>a Custom GPT</span>"
 description: "Watch it here on our homepage:"
-date: "Tuesday, January 30"
+# date: "Tuesday, January 30"
+date: "Today"
 time: "10 AM EST / 4 PM CET"
 alt_text: "Two engineers build a custom ChatGPT bot from wooden blocks."
 artwork:
