Add livestream hero
- Update state to true
- Update video ID

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -14,7 +14,7 @@ embed_source: "youtube"
 # Content
 # Update per live stream, if needed
 title: "Livestream"
-short_description: "Coding in the Kitchen with ChatGPT"
+short_description: "Fill in the Blanks"
 byline: "with Andrew Miller and Jeremy Osborn"
 
 # twitch
