--- a/_data/heros/livestreams/take-note.yml
+++ b/_data/heros/livestreams/take-note.yml
@@ -7,7 +7,7 @@ time: "10 AM EST / 4 PM CET"
 recording: false
 cta: "Watch the Recording"
 cta_url: ""
-alt_text: "Two pastel colored Valentine’s Day candy hearts with the words Take and Note."
+alt_text: "Two pastel-colored Valentine’s Day candy hearts with the words Take and Note."
 artwork:
   1: /take-note-768w.jpg
   2: /take-note-1280w.jpg
