Update home page hero
- Add livestreams hero
- Add video_ID

--- a/_data/heros/livestreams/take-note.yml
+++ b/_data/heros/livestreams/take-note.yml
@@ -7,7 +7,7 @@ date: "Today"
 time: "10 AM EST / 4 PM CET"
 recording: false
 cta: "Watch the Recording"
-cta_url: ""
+cta_url: "https://www.youtube.com/watch?v=K7lF3oihwMI"
 alt_text: "Two pastel-colored Valentine’s Day candy hearts with the words Take and Note."
 artwork:
   1: /take-note-768w.jpg
