Update home page hero
- Update livestreams promo hero
- Remove livestream
- Update variable name

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,10 +1,10 @@
 current_promo: livestreams/hero-promo.html
 auth_promo: livestreams/hero-promo.html
 
-# Live Stream
+# Livestream
 # Set true/false (lowercase).
 # Note: true overrides current/auth promo heros
-live_stream: true
+livestream: true
 
 # Source
 # Set twitch/youtube (lowercase)
