Update hero article
- Update layout template
- Remove redundant stubs
- Add article data
- Add article artwork
- Update home page hero promo

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,5 +1,5 @@
-current_promo: livestreams/hero-promo.html
-auth_promo: livestreams/hero-promo.html
+current_promo: articles/hero-article.html
+auth_promo: articles/hero-article.html
 
 # Livestream
 # Set true/false (lowercase).
