add docker bits

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
-version: '3.2'
 services:
   jekyll:
-    image: jekyll/jekyll:latest
-    environment:
-        - JEKYLL_ENV=local
-    command: jekyll serve --watch --force_polling --config _local_config.yml
-    ports:
-        - 4000:4000
-        - 35729:35729
+    image: jekyll-serve:latest
     volumes:
-      - .:/srv/jekyll
+      - .:/site
+    ports:
+      - '4000:4000'
+      - '35729:35729'
