--- a/_production_config.yml
+++ b/_production_config.yml
@@ -11,6 +11,8 @@ banner: false
 
 exclude:
   - 'docker-compose.yml'
+  - 'Dockerfile'
+  - 'docker-entrypoint.sh'
   - 'Gemfile'
   - 'Gemfile.lock'
   - 'README.md'
