--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     environment:
         - JEKYLL_ENV=local
     command: jekyll serve --watch --force_polling --config _local_config.yml
+    platform: linux/amd64
     ports:
         - 4000:4000
         - 35729:35729
