--- a/_data/heros/livestreams/fill-in-the-blanks.yml
+++ b/_data/heros/livestreams/fill-in-the-blanks.yml
@@ -1,7 +1,7 @@
 id: fill-in-the-blanks
 subhead: "New Livestream"
-title: "Fill in the Blanks: Demonstrating How to Build <span class='no-wrap'>a Custom GPT</span>"
-description: "Watch it here on our homepage:"
+title: "Fill in the Blanks: Demonstrating How to Build a Custom GPT"
+description: "Watch the livestream here on our homepage:"
 date: "Tuesday, January 30"
 time: "10 AM EST / 4 PM CET"
 recording: true
