--- a/_data/heros/livestreams/take-note.yml
+++ b/_data/heros/livestreams/take-note.yml
@@ -1,7 +1,7 @@
 id: take-note
 subhead: "New Livestream"
 title: "Take Note: Transcribing Images with ChatGPT"
-description: "Watch it here on our homepage:"
+description: "Watch the livestream here on our homepage:"
 date: "Wednesday, February 14"
 time: "10 AM EST / 4 PM CET"
 recording: true
