--- a/_data/heros/livestreams/level-up-job-search.yml
+++ b/_data/heros/livestreams/level-up-job-search.yml
@@ -8,7 +8,7 @@ time: "3 PM PST / 6 PM EDT"
 recording: false
 cta: "Watch the Recording"
 cta_url: ""
-alt_text: ""
+alt_text: "A job seeker and wizard searching for work, aided by magic to shed light on their quest."
 artwork:
   1: /level-up-job-search-768w.jpg
   2: /level-up-job-search-1280w.jpg
