--- a/_data/heros/livestreams/level-up-job-search.yml
+++ b/_data/heros/livestreams/level-up-job-search.yml
@@ -7,7 +7,7 @@ date: "Wednesday, March 27"
 time: "3 PM PST / 6 PM EDT"
 recording: false
 cta: "Watch the Recording"
-cta_url: ""
+cta_url: "https://www.youtube.com/watch?v="
 alt_text: "A job seeker and wizard searching for work, aided by magic to shed light on their quest."
 artwork:
   1: /level-up-job-search-768w.jpg
