Update livestreams promo hero
- Update guest language

--- a/_data/heros/livestreams/level-up-job-search.yml
+++ b/_data/heros/livestreams/level-up-job-search.yml
@@ -1,7 +1,7 @@
 id: level-up-job-search
 subhead: "New Livestream"
 title: "Level Up Your Job Search with ChatGPT"
-guest: "with Special Guest, Feridoon Malekzadeh"
+guest: "with Feridoon Malekzadeh"
 description: "Watch the livestream here on our homepage:"
 date: "Wednesday, March 27"
 time: "3 PM PST / 6 PM EDT"
