Update livestreams promo hero
- Update date

--- a/_data/heros/livestreams/level-up-job-search.yml
+++ b/_data/heros/livestreams/level-up-job-search.yml
@@ -3,7 +3,8 @@ subhead: "New Livestream"
 title: "Level Up Your Job Search with ChatGPT"
 guest: "with Feridoon Malekzadeh"
 description: "Watch the livestream here on our homepage:"
-date: "Wednesday, March 27"
+# date: "Wednesday, March 27"
+date: "Today"
 time: "3 PM PST / 6 PM EDT"
 recording: false
 cta: "Watch the Recording"
