--- a/_data/heros/livestreams/level-up-job-search.yml
+++ b/_data/heros/livestreams/level-up-job-search.yml
@@ -5,7 +5,7 @@ guest: "with Feridoon Malekzadeh"
 description: "Watch the livestream here on our homepage:"
 date: "Wednesday, March 27"
 time: "3 PM PST / 6 PM EDT"
-recording: false
+recording: true
 cta: "Watch the Recording"
 cta_url: "https://www.youtube.com/watch?v=iKqXRFiD7W4"
 alt_text: "A job seeker and wizard searching for work, aided by magic to shed light on their quest."
